<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@drawable/bg_gradient">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/qshing_title"
        android:textColor="#F2F2F2"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qshing_description"
        android:textSize="16sp"
        android:textColor="#F2F2F2"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:textAlignment="center"
        android:lineSpacingExtra="6sp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:textSize="15sp"
        android:background="#090909" />
</LinearLayout>
